# Mesh-Maps-Baker

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml
addon/mesh_baker/: __init__.py  bake_pipeline.py  engine_native.py  engine_python.py  maps.py  mesh_data.py  operators.py  properties.py  ui.py
cpp/: CMakeLists.txt
cpp/src/: module.cpp
scripts/: package.py
